# gap-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Polynom_tests.cpp  README.md  app.py  main.cpp
C-solution/: const.h
C-solution/Final_Refactor/: number.h  polynom.h
C-solution/Int/: Int.cpp  Int.h  task_7.cpp  task_9.cpp
C-solution/Int/task_10/: task_10.cpp
C-solution/Int/task_3/: task_3.cpp
C-solution/Int/task_4/: WithTest.cpp  task_4.cpp
C-solution/Int/task_5/: task_5.cpp
C-solution/Int/task_6/: task_6.cpp  task_6_source.cpp
C-solution/Polynom/: Polynom.cpp  Polynom.h  const.h  task_17.cpp  task_18.cpp
C-solution/Polynom/task_3/: task_3.cpp
C-test/: CMakeLists.txt  Int_tests.cpp  Polynom_tests.cpp  polynomial_tasks_tests.cpp
C-tests/: CMakeLists.txt  Polynom_tests.cpp
Frontend/: Solution_Test.html  main_page.html
static/: calculator.js  main_style.css
static/css/: main_style.css
templates/: 10.html  11.html  12.html  13.html  14.html  15.html  17.html  18.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  error_page.html  main_page.html  solution_test.html
